
[package]
name = "nexus-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
proptest = "1.0"
